--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
             "polyfills": [
               "zone.js"
             ],
+            "baseHref": "./../",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -88,9 +89,7 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              
               }
-              
             ],
             "styles": [
               "src/styles.scss"
